--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Bubble Creator</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Jitu Raj Sharma</h1>
+
+    <h1>Hello Jitu Raj Sharma</h1>
+  <script src="./script.js"></script>
 </body>
 </html>
